이미지 교체

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 });
             });
 
-            $( "#no" ).mouseover(function() {
+            $("#no").mouseover(function () {
                 var docHeight = $(document).height(),
                         docWidth = $(document).width(),
                         $div = $('#no'),
@@ -84,7 +84,7 @@
                 });
             });
 
-            $('#video1').on('canplaythrough', function() {
+            $('#video1').on('canplaythrough', function () {
                 this.play();
             });
         });
@@ -173,6 +173,7 @@
             text-shadow: none;
             color: hsla(0, 0%, 0%, 0.12);
         }
+
         .ot-letter-left span:before,
         .ot-letter-left span:after {
             transform-origin: 0 50%;
@@ -183,26 +184,25 @@
         }
 
         .ot-letter-left span:after {
-            text-shadow:
-            -1px 0px 0px hsla(360, 100%, 100%, 0.1),
+            text-shadow: -1px 0px 0px hsla(360, 100%, 100%, 0.1),
             3px 0px 1px hsla(0, 0%, 0%, 0.4);
             transform: rotateY(-15deg);
         }
 
         .ot-letter-left:hover span:before {
-            transform: scale(0.85,1) skew(0deg,20deg);
+            transform: scale(0.85, 1) skew(0deg, 20deg);
         }
 
         .ot-letter-left:hover span:after {
             transform: rotateY(-40deg);
         }
+
         .ot-letter-left {
             background: #e74d3c;
         }
 
         .ot-letter-left span {
-            text-shadow:
-            1px 4px 6px #e74d3c,
+            text-shadow: 1px 4px 6px #e74d3c,
             0 0 0 hsla(0, 0%, 0%, 0.3),
             1px 4px 6px #e74d3c;
         }
@@ -221,18 +221,17 @@
         }
 
         .ot-letter-bottom span:before {
-            transform: scale(1,1.05) skew(4deg,0deg);
+            transform: scale(1, 1.05) skew(4deg, 0deg);
         }
 
         .ot-letter-bottom span:after {
-            text-shadow:
-            0px -1px 0px hsla(360, 100%, 100%, 0.1),
+            text-shadow: 0px -1px 0px hsla(360, 100%, 100%, 0.1),
             0px 3px 1px hsla(0, 0%, 0%, 0.4);
             transform: rotateX(15deg);
         }
 
         .ot-letter-bottom:hover span:before {
-            transform: translateY(-0.035em) scale(1,1.2) skew(10deg,0deg);
+            transform: translateY(-0.035em) scale(1, 1.2) skew(10deg, 0deg);
         }
 
         .ot-letter-bottom:hover span:after {
@@ -242,7 +241,6 @@
 
 </head>
 <body>
-<div data-role="page">
 <div id="pagepiling">
     <div class="section" id="section1">
         <div class="center black">
@@ -457,19 +455,17 @@
 
     <div class="section">
         <div class="center">
-            <h1>당신을 생각하면 항상 웃음이 나고 행복합니다.</h1>
+            <h1>당신을 생각하면 <br/>항상 웃음이 나고 행복합니다.</h1>
         </div>
     </div>
 
     <div class="section">
         <div class="center">
             <h1>나랑 결혼해 줄래요?</h1>
-
             <div id="yes"><h1>Yes</h1></div>
             <div id="no"><h1>No</h1></div>
         </div>
     </div>
 </div>
-    </div>
 </body>
 </html>
